--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 body {
-    background: url(../img/library.jpg);
-    /* background: #fdf1bd; */
+    /* background: url(../img/library.jpg); */
+    background: #fdf1bd;
 }
 
 .book {
